# msander

./: LICENSE  Makefile  README.md  configure  configure_conda  configure_mpich  configure_openmpi  msander.sh
src/fftw-3.3/: CMakeLists.txt  Makefile  config.h  config.status  fftw.pc  libtool
src/fftw-3.3/api/: Makefile  api.h  f03api.sh  fftw3.f03.in  version.c
src/fftw-3.3/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  plan-guru-dft-c2r.Plo  (+25 more)
src/fftw-3.3/dft/: Makefile
src/fftw-3.3/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  indirect-transpose.Plo  indirect.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft-dit.Plo  kdft.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo  zero.Plo
src/fftw-3.3/dft/scalar/: Makefile
src/fftw-3.3/dft/simd/: Makefile
src/fftw-3.3/doc/: Makefile  fftw3.info  fftw3.info-1  fftw3.info-2
src/fftw-3.3/doc/FAQ/: Makefile
src/fftw-3.3/genfft/: Makefile
src/fftw-3.3/kernel/: Makefile  cycle.h  ifftw.h  kalloc.c  planner.c
src/fftw-3.3/kernel/.deps/: align.Plo  alloc.Plo  assert.Plo  awake.Plo  buffered.Plo  cpy1d.Plo  cpy2d-pair.Plo  cpy2d.Plo  ct.Plo  debug.Plo  extract-reim.Plo  hash.Plo  iabs.Plo  kalloc.Plo  md5-1.Plo  md5.Plo  minmax.Plo  ops.Plo  pickdim.Plo  plan.Plo  planner.Plo  primes.Plo  print.Plo  problem.Plo  rader.Plo  scan.Plo  solver.Plo  solvtab.Plo  stride.Plo  tensor.Plo  tensor1.Plo  tensor2.Plo  tensor3.Plo  tensor4.Plo  tensor5.Plo  tensor7.Plo  tensor8.Plo  tensor9.Plo  tile2d.Plo  timer.Plo  (+3 more)
src/fftw-3.3/libbench2/: Makefile  util.c
src/fftw-3.3/libbench2/.deps/: after-ccopy-from.Po  after-ccopy-to.Po  after-hccopy-from.Po  after-hccopy-to.Po  after-rcopy-from.Po  after-rcopy-to.Po  aligned-main.Po  allocate.Po  aset.Po  bench-cost-postprocess.Po  bench-exit.Po  bench-main.Po  can-do.Po  caset.Po  dotens2.Po  info.Po  main.Po  mflops.Po  mp.Po  my-getopt.Po  ovtpvt.Po  pow2.Po  problem.Po  report.Po  speed.Po  tensor.Po  timer.Po  useropt.Po  util.Po  verify-dft.Po  verify-lib.Po  verify-r2r.Po  verify-rdft2.Po  verify.Po  zero.Po
src/fftw-3.3/m4/: Makefile
src/fftw-3.3/mpi/: Makefile
src/fftw-3.3/rdft/: Makefile
src/fftw-3.3/rdft/.deps/: buffered.Plo  buffered2.Plo  conf.Plo  ct-hc2c-direct.Plo  ct-hc2c.Plo  dft-r2hc.Plo  dht-r2hc.Plo  dht-rader.Plo  direct-r2c.Plo  direct-r2r.Plo  direct2.Plo  generic.Plo  hc2hc-direct.Plo  hc2hc-generic.Plo  hc2hc.Plo  indirect.Plo  khc2c.Plo  khc2hc.Plo  kr2c.Plo  kr2r.Plo  nop.Plo  nop2.Plo  plan.Plo  plan2.Plo  problem.Plo  problem2.Plo  rank-geq2-rdft2.Plo  rank-geq2.Plo  rank0-rdft2.Plo  rank0.Plo  rdft-dht.Plo  rdft2-inplace-strides.Plo  rdft2-rdft.Plo  rdft2-strides.Plo  rdft2-tensor-max-index.Plo  solve.Plo  solve2.Plo  vrank-geq1-rdft2.Plo  vrank-geq1.Plo  vrank3-transpose.Plo
src/fftw-3.3/rdft/scalar/: Makefile
src/fftw-3.3/rdft/simd/: Makefile
src/fftw-3.3/reodft/: Makefile
src/fftw-3.3/reodft/.deps/: conf.Plo  redft00e-r2hc-pad.Plo  reodft00e-splitradix.Plo  reodft010e-r2hc.Plo  reodft11e-r2hc-odd.Plo  reodft11e-radix2.Plo  rodft00e-r2hc-pad.Plo
src/fftw-3.3/simd-support/: Makefile
src/fftw-3.3/simd-support/.deps/: altivec.Plo  (+4 more)
src/fftw-3.3/support/: Makefile
src/fftw-3.3/tests/: Makefile
src/fftw-3.3/threads/: Makefile
src/fftw-3.3/tools/: Makefile
src/lib/: CMakeLists.txt  Makefile  constants.F90  matinv.F  mexit.F90  rfree.F  rgroup.F
src/nmr_aux/prepare_input/: 0README  CMakeLists.txt  Makefile  amber_refine_from_cyana  cyana_to_RST  cyanapdb_to_amberpdb  makeANG_RST.c  makeCHIR_RST.UMBC  makeDIP_RST.cyana  makeDIP_RST.rna  makeDIST_RST.c  nef_to_RST.c
src/paramfit/: CMakeLists.txt  Makefile  bounds_check.c  calc_r_squared.c  file_io.c  fitting_control.c  function_def.h  genetic_algorithm.c  mem_alloc.c  misc_utils.c  options_summary.c  process_job_control_setting.c  process_prmtop.c  read_energy.c  read_mdcrd.c  read_prmtop.c  wizard.c
src/saxs/: CMakeLists.txt  IO.cpp  IO.h  Makefile  atm_f.cpp  atm_f.h  const.h  dx.cpp  dx.h  excess.cpp  f_calc.cpp  f_calc.h  lebedev.cpp  lebedev.h  pdb.cpp  pdb.h  pdb2saxs.sh  pddf.cpp  pddf.h  pddf_md.cpp  pddf_rism.cpp  saxsDS.h  saxs_md.cpp  saxs_md.h  saxs_rism.cpp  saxs_rism.h  vol_decomp.cpp  vol_decomp.h
src/sqm/: CMakeLists.txt  Makefile  depend  dh_correction_module.F90  makedepend  qm2_dftb_energy.F90  qm2_dftb_get_dftb3_parameters.F90  qm2_dftb_scf.F90  qm2_load_params_and_allocate.F90  qm2_parameters.F90  qm2_params_module.F90  qm2_read_nm_and_alloc.F90  qm2_scf.F90  qm_print_info.F90  qmmm_module.F90  qmmm_nml_module.F90  qmmm_qmtheorymodule.F90  rotation.F90  slater_overlap.F90  sqm.F90  utilitiesModule.F90
src/xray/cuda/: BulkMask.cpp  BulkMask.cu  BulkMask.h  BulkMaskCPU.cu  BulkMaskCPU.h  BulkMaskGPU.cu  BulkMaskGPU.h  CMakeLists.txt  DPartial.cpp  DPartial.cu  DPartial.h  DPartialCPU.cpp  DPartialCPU.h  DPartialGPU.cu  DPartialGPU.h  Makefile  NonBulk.cpp  NonBulk.h  NonBulkCPU.cpp  NonBulkCPU.cu  NonBulkCPU.h  NonBulkGPU.cu  NonBulkGPU.h  UnitCell.cpp  base_gpuContext.cpp  base_gpuContext.h  gpu.cpp  gpu.h  gpuBuffer.h  gpuContext.cpp  gpuContext.h  gpuMemoryInfo.cpp  gpuMemoryInfo.h  gputypes.cpp  gputypes.h  xray_bulk_mask.cpp  xray_bulk_mask.h  xray_common.h  xray_dpartial.cpp  xray_dpartial.h  (+5 more)
(+1490 files in other folders)
